Using the HUDCenter package, this actually works, fantastic. It's old and not updated though, so using old DLL.

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -16,6 +16,9 @@
             <setting name="AuthToken" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Needle" serializeAs="String">
+                <value />
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
@@ -23,6 +26,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OpenTK" publicKeyToken="bad199fe84eb3df4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
