--- a/TwitchVRNotifications/packages.config
+++ b/TwitchVRNotifications/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="OpenTK" version="2.0.0" targetFramework="net452" />
+  <package id="SteamVR_HUDCenter" version="0.0.0.2" targetFramework="net452" />
   <package id="TwitchLib" version="1.4.4" targetFramework="net452" />
   <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net452" />
 </packages>
