Started working on adding loading of user profile pictures, but didn't get it to work.

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -19,6 +19,9 @@
             <setting name="Needle" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ClientID" serializeAs="String">
+                <value />
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
