--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -22,6 +22,9 @@
             <setting name="ClientID" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AutoConnectChat" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
