--- a/TwitchVRNotifications/Properties/Settings.settings
+++ b/TwitchVRNotifications/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="ClientID" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="AutoConnectChat" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
