Placeholder logo setting.

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -25,6 +25,9 @@
             <setting name="AutoConnectChat" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PlaceholderLogo" serializeAs="String">
+                <value />
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
