--- a/TwitchVRNotifications/Properties/Settings.settings
+++ b/TwitchVRNotifications/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="AutoConnectChat" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PlaceholderLogo" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
