Added test settings. Updated GUI. Added auto-save.

--- a/TwitchVRNotifications/Properties/Settings.settings
+++ b/TwitchVRNotifications/Properties/Settings.settings
@@ -20,5 +20,14 @@
     <Setting Name="PlaceholderLogo" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="TestUsername" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="TestMessage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AutoSave" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
