--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -28,6 +28,15 @@
             <setting name="PlaceholderLogo" serializeAs="String">
                 <value />
             </setting>
+            <setting name="TestUsername" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TestMessage" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoSave" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
