Option to turn filter on and off. Important fields changed to passwords. Auto-save can trigger on window deactivation.

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -34,6 +34,9 @@
             <setting name="AutoSave" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="FilterOn" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
