Encrypt auth token and client id based on current user

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -37,6 +37,9 @@
             <setting name="FilterOn" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Entropy" serializeAs="String">
+                <value />
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
