--- a/TwitchVRNotifications/Properties/Settings.settings
+++ b/TwitchVRNotifications/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="FilterOn" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Entropy" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
