Remodel UI, add extra worker, refactoring

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -10,20 +10,17 @@
     </startup>
     <userSettings>
         <TwitchVRNotifications.Properties.Settings>
-            <setting name="UserName" serializeAs="String">
+            <setting name="BotUsername" serializeAs="String">
                 <value />
             </setting>
-            <setting name="AuthToken" serializeAs="String">
+            <setting name="AppClientId" serializeAs="String">
                 <value />
             </setting>
-            <setting name="Needle" serializeAs="String">
+            <setting name="AppSecret" serializeAs="String">
                 <value />
             </setting>
-            <setting name="ClientID" serializeAs="String">
+            <setting name="MessagePrefix" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="AutoConnectChat" serializeAs="String">
-                <value>False</value>
             </setting>
             <setting name="TestUsername" serializeAs="String">
                 <value />
@@ -31,14 +28,20 @@
             <setting name="TestMessage" serializeAs="String">
                 <value />
             </setting>
-            <setting name="AutoSave" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="FilterOn" serializeAs="String">
+            <setting name="MessagePrefixOn" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Entropy" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="AccessToken" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BotChatToken" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AccessTokenExpiration" serializeAs="String">
+                <value>0</value>
             </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
