Add a plethora of options for filtering messages etc
Avatar settings currently ineffective
Disabled options not implemented

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -43,6 +43,51 @@
             <setting name="AccessTokenExpiration" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="BotChannel" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AllowFollower" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AllowSubscriber" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AllowModerator" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="AllowVIP" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IgnoreBroadcaster" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="IgnoreBots" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IgnoreUsers" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AvatarEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AvatarFrameEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NotifyConnectivity" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NotifySubscribed" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NotifyHosted" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="NotifyRaided" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AvatarBadgesEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
