Fix settings lost if moving exe, fix test message not saving

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -88,6 +88,9 @@
             <setting name="AvatarBadgesEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="UpgradeNeeded" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TwitchVRNotifications.Properties.Settings>
     </userSettings>
   <runtime>
