--- a/TwitchVRNotifications/Properties/Settings.settings
+++ b/TwitchVRNotifications/Properties/Settings.settings
@@ -80,5 +80,8 @@
     <Setting Name="AvatarBadgesEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="UpgradeNeeded" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
