Fix token refresh, fix follower filter, fix avatar settings

--- a/TwitchVRNotifications/App.config
+++ b/TwitchVRNotifications/App.config
@@ -40,7 +40,7 @@
             <setting name="BotChatToken" serializeAs="String">
                 <value />
             </setting>
-            <setting name="AccessTokenExpiration" serializeAs="String">
+            <setting name="AccessTokenCreated" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="BotChannel" serializeAs="String">
@@ -60,9 +60,6 @@
             </setting>
             <setting name="IgnoreBroadcaster" serializeAs="String">
                 <value>True</value>
-            </setting>
-            <setting name="IgnoreBots" serializeAs="String">
-                <value>False</value>
             </setting>
             <setting name="IgnoreUsers" serializeAs="String">
                 <value />
