--- a/TwitchVRNotifications/packages.config
+++ b/TwitchVRNotifications/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Costura.Fody" version="3.3.2" targetFramework="net472" />
+  <package id="Fody" version="3.3.5" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
